--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <input type="text" name="firstName" id="firstName">
     <input type="number" name="lastName" id="lastName">
     <input type="number" name="age" id="age">
-        <input type="button" value="Enviar">
+    <input type="date" name="birthdate" id="birthdate">
+    <input type="button" value="Enviar">
     </form>
 </body>
 </html>
